--- a/galaxy.html
+++ b/galaxy.html
@@ -220,7 +220,7 @@
 								<p> 
 									
 				
-									<audio src="galaxy.mp3" autoplay="true" loop="true" controls></audio>
+									<audio src="Galaxy.mp3" autoplay="true" loop="true" controls></audio>
 								</p>
 								<div class="lin"></div>
 								<label for="clic" class="close">Close</label>
